# data-pipeline-example

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
data_lake/: .env  main.py  pyproject.toml
data_lake/data_lake/routers/: insert.py
data_lake/tests/: test_data_lake.py
data_lake_etl/: .env  pyproject.toml
data_lake_etl/data_lake_etl/: main.py
data_lake_etl/tests/: test_data_lake_etl.py
data_lake_insert/: .env  Dockerfile  pyproject.toml
data_lake_insert/data_lake_insert/: main.py  richlogger.py
data_lake_insert/data_lake_insert/routers/: insert.py
data_lake_insert/tests/: test_data_lake_insert.py
data_source_mock/: locust.conf  pyproject.toml
data_source_mock/data_source_mock/: main.py  richlogger.py
data_source_mock/tests/: test_data_source_mock.py
doc/dev_log/: README.md
doc/images/: readme_pipeline.drawio
scripts/: analyze.sh  clean.sh  set.sh
